0.5.2 (unreleased)
==================

- Nothing changed yet.


0.5.1 (2019-01-02)
==================

*Bugfix:*

  - Fix Python3 support.


0.5.0 (2019-01-02)
==================

*New:*

  - Add Python3 support.

0.4.3 (2015-05-11)
==================

*Bugfix:*

  - Fix missing import for ``unicodedata``

0.4.2 (2015-05-11)
==================

*Packaging:*

  - Document missing dependency on ``unicodedata``

0.4.1 (2015-01-11)
==================

*Bugfix:*

  - Fix ``setup.py`` script for unusual system encodings


0.4.0 (2014-01-28)
==================

*Bugfix:*

  - Properly handled multi-valued tags for songs.

*New:*

  - Allow display of ``{sampling}`` rate in ``kHz``
  - Accept password for mpd, as ``--mpd=PASSWORD@HOST:PORT`` connection string.


0.3.3 (2013-09-02)
==================

*Bugfix:*

  - Fix packaging

0.3.2 (2013-09-01)
==================

*Bugfix:*

  - Update the display when a song's artist/title change without changing songs
    (e.g for Web radios and streams)

*Misc:*

  - Switch packaging to setuptools

0.3.1 (2013-06-09)
==================

*Bugfix:*

  - Fix ``mpdlcd --version``
  - Don't crash when the current song has no title or no artist
  - Fix the ``{remaining}`` display field when no song is playing
  - Fix the song display for songs with no time (Web radios & co)
  - Better logging of MPD fetched state
  - Try to fill artist, name, title from all available fields
  - Fix installation instructions

0.3.0 (2012-08-13)
==================

*Bugfix:*

  - Don't crash when no config file could be read
  - Don't crash when MPD returns "no current song"
  - Fix ``--debug`` option when ``--loglevel=debug`` was given (don't log lines
    twice)

*New:*

  - Handle lcdproc charset through the ``--lcdproc-charset`` option
  - Add a ``--no-syslog`` option to disable a ``syslog`` option set in the
    configuration file.


0.2.4 (2012-03-11)
==================

*Bugfix:*

  - Properly handle 'no time' returned from MPD


0.2.3 (2012-03-08)