@@ -1,7 +1,9 @@
 0.5.2 (unreleased)
 ==================
 
-- Nothing changed yet.
+*Bugfix:*
+
+  - Fix encoding handling with Python3.
 
 
 0.5.1 (2019-01-02)
